Completar implementación y arreglar errores
