# api/apidoc.yaml
@@ -193,6 +193,55 @@ paths:
         '400':
           description: Alguno de los parámetros es inválido
 
+  /kinematics_comparison:
+    parameters:
+      - $ref: "#/components/parameters/roundYear"
+      - $ref: "#/components/parameters/roundNumber"
+      - $ref: "#/components/parameters/sessionNumber"
+      - name: driverNumber1
+        in: query
+        description: Número del primer conductor
+        schema:
+          $ref: "#/components/schemas/DriverNumber"
+      - name: driverNumber2
+        in: query
+        description: Número del segundo conductor
+        schema:
+          $ref: "#/components/schemas/DriverNumber"
+      - $ref: "#/components/parameters/lapNumber"
+
+    get:
+      description: Comparar la velocidad y aceleración de dos conductores en una vuelta, a lo largo del tiempo
+      responses:
+        '200':
+          description: Velocidad y aceleración de los conductores
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    driverNumber:
+                      $ref: '#/components/schemas/DriverNumber'
+                    data:
+                      type: object
+                      properties:
+                        time:
+                          $ref: '#/components/parameters/relativeTimestamp'
+                        s:
+                          type: number
+                          description: Coordenada s de posición (longitud de arco)
+                        versors:
+                          $ref: "#/components/schemas/Versors"
+                        velocity:
+                          $ref: '#/components/schemas/Velocity'
+                        acceleration:
+                          $ref: '#/components/schemas/Acceleration'
+
+        '400':
+          description: Alguno de los parámetros es inválido
+
 components:
   parameters:
     roundYear:
